@@ -7,7 +7,7 @@
 <h2><%= l(:label_spent_time) %></h2>
 
 <% form_remote_tag( :url => {}, :method => :get, :update => 'content' ) do %>
-<%= hidden_field_tag 'project_id', params[:project_id] %>
+<%= hidden_field_tag('project_id', params[:project_id]) if @project %>
 <%= hidden_field_tag 'issue_id', params[:issue_id] if @issue %>
 <%= render :partial => 'date_range' %>
 <% end %>
